--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-node_modules/ 
+# Ignore node_modules (already added)
+node_modules/
+
+# Ignore environment files
+.env
+.env.local
+.env.development
+.env.production
+
+
+# OS/system files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Build output
+dist/
+build/
+
+# Vite cache
+.vite/
+
+# IDE/editor settings
+.vscode/
+.idea/
